# python-dotsys

./: .gitignore  CUDA-INSTALLATION.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_arm64.txt
dotfiles/: config
dotfiles/.emacs.d/: init.org  templates
dotfiles/bash/: .bash_aliases  .bashrc
dotfiles/fish/: config.fish
dotfiles/ghostty/: config  config.ghostty
dotfiles/git/: setup-git.sh
dotfiles/shell/: .bashrc  .profile  config.fish
dotfiles/ssh/: setup-ssh.sh
dotfiles/tmux/: .tmux.conf
dotfiles/vscode/: install_extensions.sh  keybindings.json  settings.json
pre/: setup.sh
src/dotsys/: __main__.py  bash.py  bin.py  emacs.py  mamba.py  nuke.py  symlink.py  tmux.py  utils.py  vscode.py
