[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dotsys"
version = "0.2.0"
authors = [{ name = "Gabriele Beltramo", email = "hello@gbeltramo.com" }]
description = "A Python package to manage config files and general system configuration."
readme = "README.md"
requires-python = ">=3.13,<3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "build",
    "termcolor",
    "requests",
    "numba",
    "numpy>=2.4.0",
    "scipy",
    "polars>=1.40.0",
    "pydantic-ai>=1.96.0",
    "matplotlib",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.0",
    "ty",
    "ipython>=9.0.0",
    "jupyterlab>=4.5.0",
]
cuda = [
    "torch>=2.12.0",
    "torchvision",
    "triton>=3.7.0",
    "helion",
    "nvidia-cutlass-dsl[cu13]",
    "numba",
    "cython>=3.2.0",
    "pybind11",
     "transformers>=5.8.0",
    "datasets",
    "evaluate>=0.4.0",
    "lighteval>=0.10.0",
    "accelerate",
    "peft",
    "smolagents",
    "langchain>=1.3.0",
    "langchain-openai",
    "langgraph",
]

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false


[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"Makefile" = ['VERSION := {version}']
